[tool.poetry]
name = "op-acc-kp3"
version = "0.1.0"
description = "Операции по счетам (Operations on accounts). Курсовой проект 3."
authors = ["Mike Kushner <mike760807@gmail.com>"]
readme = "README.md"
packages = [{include = "op_acc_kp3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
